update us query

--- a/us.html
+++ b/us.html
@@ -82,6 +82,30 @@
                 <option value="Wyoming">Wyoming</option>
             </select>
             <b>&nbsp&nbsp&nbsp&nbsp&nbsp</b>
+            <!-- select year -->
+            <label for="Year"><b>Year:</b></label>
+            <select id="Year" name="Year">
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+            </select>
+            <b>&nbsp&nbsp&nbsp&nbsp&nbsp</b>
+            <!-- select month -->
+            <label for="Month"><b>Month:</b></label>
+            <select id="Month" name="Month">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+            </select>
+            <b>&nbsp&nbsp&nbsp&nbsp&nbsp</b>
             <!-- select sex -->
             <label for="Sex"><b>Sex:</b></label>
             <select id="Sex" name="Sex">
